# skills-introduction-to-github1

./: Cargo.toml  README.md  pubspec.yaml
.github/steps/: 1-create-a-branch.md  2-commit-a-file.md  3-open-a-pull-request.md  4-merge-your-pull-request.md
flutter/lib/: database.dart  encryption_service.dart  sync_client.dart
shared/: default_categories.json  sync_payload.schema.json
tauri/src/: db.rs  encryption.rs  lib.rs  sync_server.rs
