[package]
name = "expense_tracker_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["hooks"] }
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["dangerous_configuration"] }
rcgen = "0.12"
mdns = "3.0"
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
qrcode = "0.13"
data-encoding = "2.5"
time = { version = "0.3", features = ["formatting"] }
tokio-util = "0.7"
futures = "0.3"
anyhow = "1.0"
dirs = "5.0"
